Change copy of Meetup link

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <p class="under-construction">En construcción</p>
     <ul class="list">
         <li>
-            <a href="https://www.meetup.com/es-ES/preview/Alicante-Frontend">Ver próximos eventos</a>
+            <a href="https://www.meetup.com/es-ES/preview/Alicante-Frontend">Próximos eventos</a>
         </li>
         <li>
             <a href="http://alicantefrontend.herokuapp.com/">Únete a nuestro Slack</a>
