Open links in new tab
Closes #6

--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
     <p class="under-construction">En construcción</p>
     <ul class="list">
         <li>
-            <a href="https://www.meetup.com/es-ES/preview/Alicante-Frontend">Próximos eventos</a>
+            <a target="_blank" href="https://www.meetup.com/es-ES/preview/Alicante-Frontend">Próximos eventos</a>
         </li>
         <li>
-            <a href="http://alicantefrontend.herokuapp.com/">Únete a nuestro Slack</a>
+            <a target="_blank" href="http://alicantefrontend.herokuapp.com/">Únete a nuestro Slack</a>
         </li>
         <li>
-            <a href="https://twitter.com/AlicanteFront">Síguenos en Twitter</a>
+            <a target="_blank" href="https://twitter.com/AlicanteFront">Síguenos en Twitter</a>
         </li>
     </ul>
 </body>
