Minor changes added twitter metatag and site description

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Alicante Frontend</title>
+    <meta name="description" content="El ecosistema Frontend es un caos y ¡nos encanta! Si quieres aprender y compartir sobre desarrollo web orientado al Frontend has llegado al sitio correcto.">
     <link rel="icon" type="image/png" sizes="32x32" href="src/img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="src/img/favicon-16x16.png">
     <link rel="shortcut icon" href="src/img/favicon.ico">
@@ -14,6 +15,13 @@
     <link rel="manifest" href="src/img/manifest.json">
     <meta name="msapplication-config" content="src/img/browserconfig.xml">
     <meta name="theme-color" content="#3a84d0">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Alicante Frontend">
+    <meta name="twitter:description" content="El ecosistema Frontend es un caos y ¡nos encanta! Si quieres aprender y compartir sobre desarrollo web orientado al Frontend has llegado al sitio correcto.">
+    <meta name="twitter:site" content="@AlicanteFront">
+    <meta name="twitter:creator" content="@AlicanteFront">
+    <meta name="twitter:image:src" content="/src/img/alicante-frontend-logo.svg">
     <style>
     html {
         box-sizing: border-box;
