--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         display: flex;
         flex-direction: column;
         min-height: 75vh;
+        height: 100vh;
         justify-content: center;
         align-items: center;
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
