Added the link of stylesheet page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="manifest" href="src/img/manifest.json">
     <meta name="msapplication-config" content="src/img/browserconfig.xml">
     <meta name="theme-color" content="#3a84d0">
+    <link rel="stylesheet" href="src/css/style.css">
 </head>
 
 <body>
