Added the metatag for fb, pinterest,... and removed the html comments

--- a/index.html
+++ b/index.html
@@ -15,13 +15,17 @@
     <link rel="manifest" href="src/img/manifest.json">
     <meta name="msapplication-config" content="src/img/browserconfig.xml">
     <meta name="theme-color" content="#3a84d0">
-    <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Alicante Frontend">
     <meta name="twitter:description" content="El ecosistema Frontend es un caos y ¡nos encanta! Si quieres aprender y compartir sobre desarrollo web orientado al Frontend has llegado al sitio correcto.">
     <meta name="twitter:site" content="@AlicanteFront">
     <meta name="twitter:creator" content="@AlicanteFront">
-    <meta name="twitter:image:src" content="/src/img/alicante-frontend-logo.svg">
+    <meta name="twitter:image:src" content="/src/img/alicante-frontend-twitter.png">
+    <meta name="og:image" content="/src/img/alicante-frontend-fb.png">
+    <meta name="og:url" content="https://www.alicantefrontend.es/">
+    <meta name="og:site_name" content="Alicante Frontend">
+    <meta name="og:locale" content="es_ES">
+    <meta name="og:type" content="website">
     <style>
     html {
         box-sizing: border-box;
