--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Alicante Frontend</title>
     <meta name="description" content="El ecosistema Frontend es un caos y ¡nos encanta! Si quieres aprender y compartir sobre desarrollo web orientado al Frontend has llegado al sitio correcto.">
@@ -21,11 +21,11 @@
     <meta name="twitter:site" content="@AlicanteFront">
     <meta name="twitter:creator" content="@AlicanteFront">
     <meta name="twitter:image:src" content="src/img/alicante-frontend-twitter.png">
-    <meta name="og:image" content="src/img/alicante-frontend-fb.png">
-    <meta name="og:url" content="https://www.alicantefrontend.es/">
-    <meta name="og:site_name" content="Alicante Frontend">
-    <meta name="og:locale" content="es_ES">
-    <meta name="og:type" content="website">
+    <meta property="og:image" content="src/img/alicante-frontend-fb.png">
+    <meta property="og:url" content="https://www.alicantefrontend.es/">
+    <meta property="og:site_name" content="Alicante Frontend">
+    <meta property="og:locale" content="es_ES">
+    <meta property="og:type" content="website">
     <style>
     html {
         box-sizing: border-box;
