Added more explicit information

--- a/index.html
+++ b/index.html
@@ -21,11 +21,16 @@
     <meta name="twitter:site" content="@AlicanteFront">
     <meta name="twitter:creator" content="@AlicanteFront">
     <meta name="twitter:image:src" content="src/img/alicante-frontend-twitter.png">
-    <meta property="og:image" content="src/img/alicante-frontend-fb.png">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Alicante Frontend">
+    <meta property="og:description" content="El ecosistema Frontend es un caos y ¡nos encanta! Si quieres aprender y compartir sobre desarrollo web orientado al Frontend has llegado al sitio correcto.">
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:secure_url" content="src/img/alicante-frontend-fb.png">
     <meta property="og:url" content="https://www.alicantefrontend.es/">
     <meta property="og:site_name" content="Alicante Frontend">
     <meta property="og:locale" content="es_ES">
-    <meta property="og:type" content="website">
     <style>
     html {
         box-sizing: border-box;
