--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Alicante Frontend">
     <meta property="og:description" content="El ecosistema Frontend es un caos y ¡nos encanta! Si quieres aprender y compartir sobre desarrollo web orientado al Frontend has llegado al sitio correcto.">
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:secure_url" content="src/img/alicante-frontend-fb.png">
     <meta property="og:url" content="https://www.alicantefrontend.es/">
