Trying to fix twitter image

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta itemprop="name" content="Alicante Frontend">
     <meta itemprop="description" content="El ecosistema Frontend es un caos y ¡nos encanta! Si quieres aprender y compartir sobre desarrollo web orientado al Frontend has llegado al sitio correcto.">
     <meta itemprop="image" content="src/img/alicante-frontend.png">
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@AlicanteFront" />
     <meta name="twitter:creator" content="@AlicanteFront" />
     <meta name="twitter:image" content="src/img/alicante-frontend-tw.png"/>
