--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <meta name="image" content="src/img/alicante-frontend.png">
     <meta itemprop="name" content="Alicante Frontend">
     <meta itemprop="description" content="El ecosistema Frontend es un caos y ¡nos encanta! Si quieres aprender y compartir sobre desarrollo web orientado al Frontend has llegado al sitio correcto.">
-    <meta itemprop="image" content="https://deploy-preview-9--alicantefrontend.netlify.com/src/img/alicante-frontend-fb.png">
+    <meta itemprop="image" content="src/img/alicante-frontend.png">
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@AlicanteFront" />
     <meta name="twitter:creator" content="@AlicanteFront" />
-    <meta name="twitter:image" content="https://deploy-preview-9--alicantefrontend.netlify.com/src/img/alicante-frontend-tw.png"/>
+    <meta name="twitter:image" content="src/img/alicante-frontend-tw.png"/>
     <meta property="og:site_name" content="Alicante Frontend">
     <meta property="og:url" content="https://www.alicantefrontend.es" />
     <meta property="og:title" content="Alicante Frontend" />
