--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <meta name="twitter:site" content="@AlicanteFront" />
     <meta name="twitter:creator" content="@AlicanteFront" />
     <meta name="twitter:image" content="src/img/alicante-frontend-tw.png"/>
+    <meta name="twitter:image:alt" content="Alicante Frontend Logo"/>
     <meta property="og:site_name" content="Alicante Frontend">
     <meta property="og:url" content="https://www.alicantefrontend.es" />
     <meta property="og:title" content="Alicante Frontend" />
