--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta name="twitter:image" content="src/img/alicante-frontend-tw.png"/>
     <meta name="twitter:image:alt" content="Alicante Frontend Logo"/>
     <meta property="og:site_name" content="Alicante Frontend">
-    <meta property="og:url" content="https://www.alicantefrontend.es" />
+    <meta property="og:url" content="https://www.alicantefrontend.es/" />
     <meta property="og:title" content="Alicante Frontend" />
     <meta property="og:description" content="El ecosistema Frontend es un caos y ¡nos encanta! Si quieres aprender y compartir sobre desarrollo web orientado al Frontend has llegado al sitio correcto." />
     <meta property="og:image" content="src/img/alicante-frontend-fb.png">
