--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
     <meta name="theme-color" content="#3a84d0">
     <title>Alicante Frontend</title>
     <meta name="description" content="El ecosistema Frontend es un caos y ¡nos encanta! Si quieres aprender y compartir sobre desarrollo web orientado al Frontend has llegado al sitio correcto.">
-    <meta name="image" content="src/img/alicante-frontend.png">
+    <meta name="image" content="https://www.alicantefrontend.es/src/img/alicante-frontend.png">
     <meta itemprop="name" content="Alicante Frontend">
     <meta itemprop="description" content="El ecosistema Frontend es un caos y ¡nos encanta! Si quieres aprender y compartir sobre desarrollo web orientado al Frontend has llegado al sitio correcto.">
-    <meta itemprop="image" content="src/img/alicante-frontend.png">
+    <meta itemprop="image" content="https://www.alicantefrontend.es/src/img/alicante-frontend.png">
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@AlicanteFront" />
     <meta name="twitter:creator" content="@AlicanteFront" />
-    <meta name="twitter:image" content="src/img/alicante-frontend-tw.png"/>
+    <meta name="twitter:image" content="https://www.alicantefrontend.es/src/img/alicante-frontend-tw.png"/>
     <meta name="twitter:image:alt" content="Alicante Frontend Logo"/>
     <meta property="og:site_name" content="Alicante Frontend">
     <meta property="og:url" content="https://www.alicantefrontend.es/" />
     <meta property="og:title" content="Alicante Frontend" />
     <meta property="og:description" content="El ecosistema Frontend es un caos y ¡nos encanta! Si quieres aprender y compartir sobre desarrollo web orientado al Frontend has llegado al sitio correcto." />
-    <meta property="og:image" content="src/img/alicante-frontend-fb.png">
+    <meta property="og:image" content="https://www.alicantefrontend.es/src/img/alicante-frontend-fb.png">
     <meta property="og:locale" content="es_ES">
     <link rel="stylesheet" href="src/css/style.css">
 </head>
