--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="src/img/apple-touch-icon.png">
     <link rel="mask-icon" href="src/img/safari-pinned-tab.svg" color="#3a84d0">
     <link rel="manifest" href="src/img/manifest.json">
+    <link rel="author" href="humans.txt" />
     <meta name="msapplication-config" content="src/img/browserconfig.xml">
     <meta name="theme-color" content="#3a84d0">
     <title>Alicante Frontend</title>
@@ -48,6 +49,9 @@
             <a target="_blank" href="https://twitter.com/AlicanteFront">Síguenos en Twitter</a>
         </li>
     </ul>
+    <footer>
+        <a href="humans.txt"><img src="src/img/humanstxt.gif"/></a>
+    </footer>
 </body>
 
 </html>
