add class footer-right-link

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </li>
     </ul>
     <footer>
-        <a href="humans.txt"><img src="src/img/humanstxt.gif"/></a>
+        <a class="footer-right-link" href="humans.txt"><img src="src/img/humanstxt.gif"/></a>
     </footer>
 </body>
 
