Add email and emoji

--- a/index.html
+++ b/index.html
@@ -40,13 +40,16 @@
     <p class="under-construction">En construcción</p>
     <ul class="list">
         <li>
-            <a target="_blank" href="https://www.meetup.com/es-ES/Alicante-Frontend">Próximos eventos</a>
+            <a target="_blank" href="https://www.meetup.com/es-ES/Alicante-Frontend">🗓 Próximos eventos</a>
         </li>
         <li>
-            <a target="_blank" href="http://alicantefrontend.herokuapp.com/">Únete a nuestro Slack</a>
+            <a target="_blank" href="mailto:alicante.frontend@gmail.com">📧 Escríbenos</a>
         </li>
         <li>
-            <a target="_blank" href="https://twitter.com/AlicanteFront">Síguenos en Twitter</a>
+            <a target="_blank" href="http://alicantefrontend.herokuapp.com/">💬 Únete a nuestro Slack</a>
+        </li>
+        <li>
+            <a target="_blank" href="https://twitter.com/AlicanteFront">🐦 Síguenos en Twitter</a>
         </li>
     </ul>
     <footer>
