--- a/index.html
+++ b/index.html
@@ -41,22 +41,22 @@
     <ul class="list">
         <li>
             <a target="_blank" href="https://www.meetup.com/es-ES/Alicante-Frontend">
-                <span>🗓 </span>Próximos eventos
+                🗓 <span>Próximos eventos</span>
             </a>
         </li>
         <li>
             <a target="_blank" href="mailto:alicante.frontend@gmail.com">
-                <span>📧 </span>Escríbenos
+                📧 <span>Escríbenos</span>
             </a>
         </li>
         <li>
             <a target="_blank" href="http://alicantefrontend.herokuapp.com/">
-                <span>💬 </span>Únete a nuestro Slack
+                💬 <span>Únete a nuestro Slack</span>
             </a>
         </li>
         <li>
             <a target="_blank" href="https://twitter.com/AlicanteFront">
-                <span>🐦 </span>Síguenos en Twitter
+                🐦 <span>Síguenos en Twitter</span>
             </a>
         </li>
     </ul>
