Add Google verification meta tag

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <meta property="og:description" content="El ecosistema Frontend es un caos y ¡nos encanta! Si quieres aprender y compartir sobre desarrollo web orientado al Frontend has llegado al sitio correcto." />
     <meta property="og:image" content="https://www.alicantefrontend.es/src/img/alicante-frontend-fb.png">
     <meta property="og:locale" content="es_ES">
+    <meta name="google-site-verification" content="PagtocduJuodUlsRBz6CoXTatJdvuZbZlnSkIpiGgbo" />
     <link rel="stylesheet" href="src/css/style.css">
 </head>
 
