--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
     <meta property="og:locale" content="es_ES">
     <meta name="google-site-verification" content="PagtocduJuodUlsRBz6CoXTatJdvuZbZlnSkIpiGgbo" />
     <link rel="stylesheet" href="src/css/style.css">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-87037918-3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-87037918-3');
+    </script>
 </head>
 
 <body>
