compressed imgs, 'es' lang attr on html tag, 'noopener noreferrer' on links

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -38,7 +38,6 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
       gtag('config', 'UA-87037918-3');
     </script>
 </head>
@@ -48,29 +47,28 @@
     <img class="logo" src="src/img/alicante-frontend-logo.svg" alt="Alicante Frontend Logo" />
     <ul class="list">
         <li>
-            <a target="_blank" href="https://www.meetup.com/es-ES/Alicante-Frontend">
+            <a target="_blank" rel="noopener noreferrer" href="https://www.meetup.com/es-ES/Alicante-Frontend">
                 🗓 <span>Próximos eventos</span>
             </a>
         </li>
         <li>
-            <a target="_blank" href="mailto:alicante.frontend@gmail.com">
+            <a target="_blank" rel="noopener noreferrer" href="mailto:alicante.frontend@gmail.com">
                 📧 <span>Escríbenos</span>
             </a>
         </li>
         <li>
-            <a target="_blank" href="http://alicantefrontend.herokuapp.com/">
+            <a target="_blank" rel="noopener noreferrer" href="http://alicantefrontend.herokuapp.com/">
                 💬 <span>Únete a nuestro Slack</span>
             </a>
         </li>
         <li>
-            <a target="_blank" href="https://twitter.com/AlicanteFront">
+            <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/AlicanteFront">
                 🐦 <span>Síguenos en Twitter</span>
             </a>
         </li>
     </ul>
     <footer>
-        <a class="footer-right-link" href="humans.txt"><img src="src/img/humanstxt.gif" alt="" /></a>
+        <a class="footer-right-link" href="humans.txt" target="_blank" rel="noopener noreferrer"><img src="src/img/humanstxt.gif" alt="" /></a>
     </footer>
 </body>
-
 </html>
