--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
                 🐦 <span>Síguenos en Twitter</span>
             </a>
         </li>
+        <li>
+            <a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/AlicanteFrontend">
+                📺 <span>Suscríbete al canal</span>
+            </a>
+        </li>
     </ul>
     <footer>
         <a class="footer-right-link" href="humans.txt" target="_blank" rel="noopener noreferrer"><img src="src/img/humanstxt.gif" alt="" /></a>
