Update slack link

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </a>
         </li>
         <li>
-            <a target="_blank" rel="noopener noreferrer" href="http://alicantefrontend.herokuapp.com/">
+            <a target="_blank" rel="noopener noreferrer" href="mailto:mailto:alicante.frontend@gmail.com?subject=Unirme a Slack&body=Hola, me gustaría unirme a vuestro grupo de slack.">
                 💬 <span>Únete a nuestro Slack</span>
             </a>
         </li>
